[gd_scene load_steps=2 format=3 uid="uid://cd0lc8cmbsr8b"]

[ext_resource type="Script" path="res://Scripts/StageSelect.gd" id="1_vc5a4"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc5a4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -85.5
offset_right = 150.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Stage1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "1: Boss Battle #2 [8-bit]"

[node name="Stage2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "2: Final Boss Battle 6 V2"

[node name="Stage3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "3: Boss Battle #9 [Metal]"

[node name="Stage4" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "4: Fight for Better Future [Rock/Metal]"

[node name="BackToMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Stage1" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Stage2" to="." method="_on_stage_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Stage3" to="." method="_on_stage_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Stage4" to="." method="_on_stage_4_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
